utoipa-gen/tests/snapshots/path_derive_actix__path_derive_custom_generic_wrapper.snap
---
source: utoipa-gen/tests/path_derive_actix.rs
expression: "&schemas"
snapshot_kind: text
---
{
  "Item": {
    "type": "string"
  }
}
