utoipa-gen/tests/snapshots/path_derive_actix__path_with_all_args-2.snap
---
source: utoipa-gen/tests/path_derive_actix.rs
expression: "&operation.pointer(\"/requestBody\")"
snapshot_kind: text
---
{
  "content": {
    "application/json": {
      "schema": {
        "$ref": "#/components/schemas/Item"
      }
    }
  },
  "required": true
}
