utoipa-gen/tests/snapshots/path_derive_actix__path_with_all_args_using_uuid.snap
---
source: utoipa-gen/tests/path_derive_actix.rs
expression: "&operation.pointer(\"/parameters\").unwrap()"
snapshot_kind: text
---
[
  {
    "in": "path",
    "name": "uuid",
    "required": true,
    "schema": {
      "format": "uuid",
      "type": "string"
    }
  }
]
